--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+# theme: minima
+theme: jekyll-theme-architect
 # remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
